--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -1,7 +1,10 @@
-name: Run Python Script on Commit
+name: Update Dune Table (dune.growthepie.l2economics_mapping)
 
+# Trigger only when the specified file is changed!
 on: 
   push:
+    paths:
+      - "economics_da/economics_mapping.yml"
 
 jobs:
   run-script:
@@ -22,10 +25,4 @@ jobs:
 
     - name: Run the Python Script
       run: |
-        python .github/scripts/run_script.py
-
-    - name: Upload CSV File
-      uses: actions/upload-artifact@v3
-      with:
-        name: economics_mapping
-        path: economics_mapping.csv
+        python .github/scripts/update_dune_table.py
