--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        pip install pyyaml pandas
+        pip install pyyaml pandas requests
 
     - name: Run the Python Script
       run: |
