add api key to run

--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -20,6 +20,8 @@ jobs:
         python-version: '3.9'
 
     - name: Install Dependencies
+      env:
+        DUNE_KEY: ${{ secrets.DUNE_KEY }}
       run: |
         pip install pyyaml pandas requests
 
