--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1,4 +1,5 @@
 arbitrum:
+  gtp_origin_key: "arbitrum"
   L1:
     - from_address: null
       to_address: "0x1c479675ad559DC151F6Ec7ed3FbF8ceE79582B6"
@@ -131,6 +132,7 @@ arbitrum:
       comment: "blob producer"
 
 gravity:
+  gtp_origin_key: "gravity"
   L1:
     - from_address: null
       to_address: "0xf993AF239770932A0EDaB88B6A5ba3708Bd58239"
@@ -150,6 +152,7 @@ gravity:
       comment: "addSequencerL2BatchFromOrigin (first used 2024-05-19)"
 
 optimism:
+  gtp_origin_key: "optimism"
   L1:
     - from_address: null
       to_address: "0x4bf681894abec828b212c906082b444ceb2f6cf6"
@@ -186,6 +189,7 @@ optimism:
       comment: "blob producer"
 
 base:
+  gtp_origin_key: "base"
   L1:
     - from_address: "0x5050f69a9786f081509234f1a7f4684b5e5b76c9"
       to_address: "0xff00000000000000000000000000000000008453"
@@ -206,6 +210,7 @@ base:
       comment: "blob producer"
 
 blast:
+  gtp_origin_key: "blast"
   L1:
     - from_address: "0x415c8893d514f9bc5211d36eeda4183226b84aa7"
       to_address: "0xff00000000000000000000000000000000081457"
@@ -222,6 +227,7 @@ blast:
       comment: "blob producer"
 
 zora:
+  gtp_origin_key: "zora"
   L1:
     - from_address: "0x625726c858dbf78c0125436c943bf4b4be9d9033"
       to_address: "0x6f54ca6f6ede96662024ffd61bfd18f3f4e34dff"
@@ -238,6 +244,7 @@ zora:
       comment: "blob producer"
 
 mode:
+  gtp_origin_key: "mode"
   L1:
     - from_address: "0x99199a22125034c808ff20f377d91187e8050f2e"
       to_address: "0x24e59d9d3bd73ccc28dc54062af7ef7bff58bd67"
@@ -254,6 +261,7 @@ mode:
       comment: "blob producer"
 
 manta:
+  gtp_origin_key: "manta"
   L1:
     - from_address: "0xa76e31d8471d569efdd3d95d1b11ce6710f4533f"
       to_address: "0xaeba8e2307a22b6824a9a7a39f8b016c357cd1fe"
@@ -267,6 +275,7 @@ manta:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAIZiad33fbxA7Z0="
 
 derive:
+  gtp_origin_key: "derive"
   L1:
     - from_address: "0x14e4E97bDc195d399Ad8E7FC14451C279FE04c8e"
       to_address: "0x5f7f7f6DB967F0ef10BdA0678964DBA185d16c50"
@@ -280,6 +289,7 @@ derive:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAACLkdk+ILapw="
 
 orderly:
+  gtp_origin_key: "orderly"
   L1:
     - from_address: "0xf8dB8Aba597fF36cCD16fECfbb1B816B3236E9b8"
       to_address: "0x08aA34cC843CeEBcC88A627F18430294aA9780be"
@@ -293,6 +303,7 @@ orderly:
     -  namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAABYTLU4hLOUU="
 
 metis:
+  gtp_origin_key: "metis"
   L1:
     - from_address: "0x1A9da0aedA630dDf2748a453BF6d92560762D914"
       to_address: "0xFf00000000000000000000000000000000001088"
@@ -316,6 +327,7 @@ metis:
       comment: "appendStateBatchByChainId (first used 2024-03-21)"
 
 redstone:
+  gtp_origin_key: "redstone"
   L1:
     - from_address: null
       to_address: "0x97A2dA87d3439b172e6DD027220e01c9Cb565B80"
@@ -335,6 +347,7 @@ redstone:
       comment: "OutputOracle, proposeL2Output"
 
 worldchain:
+  gtp_origin_key: "worldchain"
   L1:
     - from_address: null
       to_address: "0x19A6d1E9034596196295CF148509796978343c5D"
@@ -367,6 +380,7 @@ lisk:
       comment: "blob producer (first used 2024-05-03)"
 
 imx:
+  gtp_origin_key: "imx"
   L1:
     - from_address: null
       to_address: "0x16BA0f221664A5189cf2C1a7AF0d3AbFc70aA295"
@@ -378,6 +392,7 @@ imx:
       comment: "updateState"
 
 linea:
+  gtp_origin_key: "linea"
   L1:
     - from_address: null
       to_address: "0xd19d4B5d358258f05D7B411E21A1460D11B0876F"
@@ -422,6 +437,7 @@ linea:
       comment: "blob producer (first used 2024-10-21)"
 
 loopring:
+  gtp_origin_key: "loopring"
   L1:
     - from_address: null
       to_address: "0x153CdDD727e407Cb951f728F24bEB9A5FaaA8512"
@@ -429,6 +445,7 @@ loopring:
       comment: "submitBlocksWithCallbacks (proof is verified immediately)"
 
 mantle:
+  gtp_origin_key: "mantle"
   L1:
     - from_address: null
       to_address: "0x50Fa427235C7C8cAA4A0C21b5009f5a0d015B23A"
@@ -456,6 +473,7 @@ mantle:
       comment: "L2OutputOracle, proposeL2Output (used since 2024-03-15)"
 
 polygon_zkevm:
+  gtp_origin_key: "polygon_zkevm"
   L1:
     - from_address: null
       to_address: "0x5132a183e9f3cb7c848b0aac5ae0c4f0491b7ab2"
@@ -483,6 +501,7 @@ polygon_zkevm:
       comment: "verifyBatchesTrustedAggregator (first used 2024-02-13, last used 2024-08-27)"
 
 scroll:
+  gtp_origin_key: "scroll"
   L1:
     - from_address: null
       to_address: "0x987e300fDfb06093859358522a79098848C33852"
@@ -519,6 +538,7 @@ scroll:
       comment: "blob producer"
 
 starknet:
+  gtp_origin_key: "starknet"
   L1:
     - from_address: null
       to_address: "0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
@@ -543,6 +563,7 @@ starknet:
       comment: "blob producer"
 
 zksync_era:
+  gtp_origin_key: "zksync_era"
   L1:
     - from_address: null
       to_address: "0x3dB52cE065f728011Ac6732222270b3F2360d919"
@@ -599,6 +620,7 @@ zksync_era:
       comment: "blob producer"
 
 taiko:
+  gtp_origin_key: "taiko"
   L1:
     - from_address: null
       to_address: "0x06a9Ab27c7e2255df1815E6CC0168d7755Feb19a"
@@ -667,6 +689,7 @@ taiko:
       comment: "all blob producer including self deployed contracts v2 (first used 2024-11-07)"
 
 rhino:
+  gtp_origin_key: "rhino"
   L1:
     - from_address: null
       to_address: "0xc3a5b823b3c7e5f5a7da674b50e7c95993330ddd"
@@ -682,6 +705,7 @@ rhino:
       comment: "updateState (first used 2020-05-31)"
 
 fraxtal:
+  gtp_origin_key: "fraxtal"
   L1:
     - from_address: "0x6017f75108f251a488B045A7ce2a7C15b179d1f2"
       to_address: "0xfF000000000000000000000000000000000420fC"
@@ -693,6 +717,7 @@ fraxtal:
       comment: "proposeL2Output (first used 2024-02-01)"
 
 kroma:
+  gtp_origin_key: "kroma"
   L1:
     - from_address: null
       to_address: "0x180c77aE51a9c505a43A2C7D81f8CE70cacb93A6"
@@ -709,6 +734,7 @@ kroma:
       comment: "0x blob producer"
 
 mint:
+  gtp_origin_key: "mint"
   L1:
     - from_address: null
       to_address: "0xB751A613f2Db932c6cdeF5048E6D2af05F9B98ED"
@@ -745,6 +771,7 @@ aevo:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAADBuw7+PjGs8="
 
 ancient8:
+  gtp_origin_key: "ancient8"
   celestia:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAADE4vVvVyRsg="
 
@@ -797,6 +824,7 @@ onchain:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAABNfLrOLSCTY="
 
 gitcoin_pgn:
+  gtp_origin_key: "gitcoin_pgn"
   celestia:
     - gtp_origin_key: "gitcoin_pgn"
       namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAADNtEcdl1sYY="
