--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -192,7 +192,24 @@ optimism:
     - from_address: null
       to_address: "0xe5965Ab5962eDc7477C8520243A95517CD252fA9"
       method: "0x82ecf2f6"
-      comment: "DisputeGameFactory, create root (actively used since 2024-05-16)"
+      comment: "DisputeGameFactory, create root (first used 2024-05-16)"
+    - from_address: "0xD22d93fE3341B7f5837Ce83B57169c10F06FF0e0"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-05-20)"
+    - from_address: "0xD22d93fE3341B7f5837Ce83B57169c10F06FF0e0"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-05-20)"
+    - from_address: "0xD22d93fE3341B7f5837Ce83B57169c10F06FF0e0"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (first used 2024-05-27)"
+    - from_address: "0xD22d93fE3341B7f5837Ce83B57169c10F06FF0e0"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (first used 2024-05-16)"
+
   beacon:
     - from_address: "0x6887246668a3b87f54deb3b94ba47a6f63f32985"
       to_address: null
@@ -214,6 +231,22 @@ base:
       to_address: "0x43edB88C4B80fDD2AdFF2412A7BebF9dF42cB40e"
       method: "0x82ecf2f6"
       comment: "create (first used 2024-10-30)"
+    - from_address: "0x8Ca1E12404d16373Aef756179B185F27b2994F3a"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-10-13)"
+    - from_address: "0x8Ca1E12404d16373Aef756179B185F27b2994F3a"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-10-13)"
+    - from_address: "0x8Ca1E12404d16373Aef756179B185F27b2994F3a"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (first used 2024-10-20)"
+    - from_address: "0x8Ca1E12404d16373Aef756179B185F27b2994F3a"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (first used 2024-10-09)"
   beacon:
     - from_address: "0x5050f69a9786f081509234f1a7f4684b5e5b76c9"
       to_address: null
@@ -236,6 +269,160 @@ blast:
       to_address: null
       method: null
       comment: "blob producer"
+
+binary_holdings:
+  name: "Binary Holdings"
+  l1:
+    - from_address: null
+      to_address: "0x012f4baa6e0F5Ac4dFDF47BDdd9CF68a2B17821e"
+      method: "0x9aaab648"
+      comment: "proposeL2output (first used 2024-06-26)"
+    - from_address: null
+      to_address: "0xFF00000000000000000000000000000000000624"
+      method: null
+      comment: "commit blob (first used 2024-06-26)"
+  beacon:
+    - from_address: null
+      to_address: "0xFF00000000000000000000000000000000000624"
+      method: null
+      comment: "blob space (first used 2024-06-26)"
+
+shape:
+  name: "Shape"
+  l1:
+    - from_address: "0xf7ca543d652e38692fd12f989eb55b5327ec9a20"
+      to_address: "0xfF00000000000000000000000000000000000360"
+      method: null
+      comment: "commit blob (first used 2024-07-23)"
+    - from_address: null
+      to_address: "0x2c03e8BF8b16Af89079852BE87f0e9eC674a5952"
+      method: "0x82ecf2f6"
+      comment: "create by whitelisted proposer (first used 2025-01-27)"
+    - from_address: "0x7923762873Eab1929b7e52D895FD5351e879b7f5"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-01-31)"
+    - from_address: "0x7923762873Eab1929b7e52D895FD5351e879b7f5"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-01-31)"
+    - from_address: "0x7923762873Eab1929b7e52D895FD5351e879b7f5"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0x7923762873Eab1929b7e52D895FD5351e879b7f5"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
+  beacon:
+    - from_address: "0xf7ca543d652e38692fd12f989eb55b5327ec9a20"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2024-07-23)"
+
+polynomial:
+  name: "Polynomial"
+  l1:
+    - from_address: "0x5DA28F0186051a9F7b9eE2553FFdc165EB0A6714"
+      to_address: "0xe512D477Cc89196AF2cE837f6AB8EA30e199f757"
+      method: "0x9aaab648"
+      comment: "proposeL2Output (first used 2024-06-11)"
+    - from_address: "0x67a44ce38627f46f20b1293960559ed85dd194f1"
+      to_address: "0x0bd57e83B5E0f9eCD84d559bB58e1EcFEEdD2565"
+      method: null
+      comment: "commit blob (first used 2024-06-10)"
+  beacon:
+    - from_address: "0x67a44ce38627f46f20b1293960559ed85dd194f1"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2024-06-10)"
+
+morph:
+  name: "Morph"
+  l1:
+    - from_address: null
+      to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
+      method: "0x4a8d544f"
+      comment: "commitBatch (first used 2025-01-13)"
+    - from_address: null
+      to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
+      method: "0xd63b3549"
+      comment: "commitBatch (first used 2024-10-21, last used 2025-01-13)"
+    - from_address: null
+      to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
+      method: "0x13361101"
+      comment: "finalizeBatch (first used 2024-10-21)"
+  beacon:
+    - from_address: null
+      to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
+      method: null
+      comment: "blob space commitBatch by 7 different sequencers (first used 2024-10-21)"
+
+unichain:
+  name: "Unichain"
+  l1:
+    - from_address: null
+      to_address: "0x2F12d621a16e2d3285929C9996f478508951dFe4"
+      method: "0x82ecf2f6"
+      comment: "create by proposer, anyone can submit a root (first used 2024-11-04)"
+    - from_address: "0x2F60A5184c63ca94f82a27100643DbAbe4F3f7Fd"
+      to_address: "0xFf00000000000000000000000000000000000130"
+      method: null
+      comment: "commit blob (first used 2024-11-02)"
+    - from_address: "0x950983F83cC3957664BA0fFB5780db06d7Fd1Be7"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-11-08)"
+    - from_address: "0x950983F83cC3957664BA0fFB5780db06d7Fd1Be7"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-11-08)"
+    - from_address: "0x950983F83cC3957664BA0fFB5780db06d7Fd1Be7"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (first used 2025-01-28)"
+    - from_address: "0x950983F83cC3957664BA0fFB5780db06d7Fd1Be7"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (first used 2025-01-22)"
+  beacon:
+    - from_address: null
+      to_address: "0xFf00000000000000000000000000000000000130"
+      method: null
+      comment: "blob space (first used 2024-11-02)"
+
+hashkey:
+  name: "HashKey Chain"
+  l1:
+    - from_address: null
+      to_address: "0x04Ec030f362CE5A0b5Fe2d4B4219f287C2EBDE50"
+      method: "0x82ecf2f6"
+      comment: "create by proposer, whitelisted for now (first used 2024-12-16)"
+    - from_address: "0x9391791f7cb74f8bfda65edc0749efd964311b55"
+      to_address: "0x0004cb44C80b6Fbf8ceb1d80AF688C9f7C0b2aB5"
+      method: null
+      comment: "commit blob (first used 2024-12-16)"
+    - from_address: "0xAdC9eAdA4070f9f363F41c21fA1C2d84FF2E0803"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-12-20)"
+    - from_address: "0xAdC9eAdA4070f9f363F41c21fA1C2d84FF2E0803"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-12-20)"
+    - from_address: "0xAdC9eAdA4070f9f363F41c21fA1C2d84FF2E0803"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0xAdC9eAdA4070f9f363F41c21fA1C2d84FF2E0803"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
+  beacon:
+    - from_address: "0x9391791f7cb74f8bfda65edc0749efd964311b55"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2024-12-16)"
 
 zora:
   name: "Zora"
@@ -367,11 +554,27 @@ worldchain:
     - from_address: null
       to_address: "0x069c4c579671f8c120b1327a73217d01ea2ec5ea"
       method: "0x82ecf2f6"
-      comment: "create (first used 2025-01-06)"
+      comment: "create, only whitelisted entitiy so far (first used 2025-01-06)"
     - from_address: "0xdBBE3D8c2d2b22A2611c5A94A9a12C2fCD49Eb29"
       to_address: "0xff00000000000000000000000000000000000480"
       method: null
       comment: "Commit Blob (Type 3, EIP4844 tx) (first used)"
+    - from_address: "0x716B246C5C286F4b49E240865782A6e42b619BB7"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-01-13)"
+    - from_address: "0x716B246C5C286F4b49E240865782A6e42b619BB7"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-01-13)"
+    - from_address: "0x716B246C5C286F4b49E240865782A6e42b619BB7"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0x716B246C5C286F4b49E240865782A6e42b619BB7"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
   beacon:
     - from_address: "0xdBBE3D8c2d2b22A2611c5A94A9a12C2fCD49Eb29"
       to_address: "0xff00000000000000000000000000000000000480"
@@ -1025,6 +1228,22 @@ swell:
       to_address: null
       method: "0x82ecf2f6"
       comment: "Create (first used 2024-11-27)"
+    - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-12-12)"
+    - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-12-12)"
+    - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
   beacon:
     - from_address: "0xf854cd5B26bfd73d51236c0122798907Ed65B1f2"
       to_address: null
@@ -1042,6 +1261,22 @@ ink:
       to_address: "0x10d7B35078d3baabB96Dd45a9143B94be65b12CD"
       method: "0x82ecf2f6"
       comment: "Create (first used 2024-12-06)"
+    - from_address: "0x837c4C12b54231250C68A80ea7c2181A6Bd5EaA9"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-12-16)"
+    - from_address: "0x837c4C12b54231250C68A80ea7c2181A6Bd5EaA9"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-12-16)"
+    - from_address: "0x837c4C12b54231250C68A80ea7c2181A6Bd5EaA9"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (first used 2025-01-24)"
+    - from_address: "0x837c4C12b54231250C68A80ea7c2181A6Bd5EaA9"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (first used 2025-01-14)"
   beacon:
     - from_address: "0x500d7Ea63CF2E501dadaA5feeC1FC19FE2Aa72Ac"
       to_address: null
@@ -1059,6 +1294,22 @@ soneium:
       to_address: "0x512A3d2c7a43BD9261d2B8E8C9c70D4bd4D503C0"
       method: "0x82ecf2f6"
       comment: "Create (first used 2024-12-02)"
+    - from_address: "0x884A26dB09Ed82B65332a97f98C4282fF3747712"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2024-12-06)"
+    - from_address: "0x884A26dB09Ed82B65332a97f98C4282fF3747712"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2024-12-06)"
+    - from_address: "0x884A26dB09Ed82B65332a97f98C4282fF3747712"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0x884A26dB09Ed82B65332a97f98C4282fF3747712"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
   beacon:
     - from_address: "0x6776BE80dBAda6A02B5F2095cF13734ac303B8d1"
       to_address: null
@@ -1211,3 +1462,20 @@ turbo:
   name: "Turbo"
   celestia:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAACAgICAgICAg="
+
+zircuit:
+  name: "Zircuit"
+  l1:
+    - from_address: "0xaf1e4f6a47af647f87c0ec814d8032c4a4bff145"
+      to_address: "0xff00000000000000000000000000000000048900"
+      method: null
+      comment: "commit blob & calldata (first used 2024-07-02)"
+    - from_address: "0xE8C20EA8eF100d7aa3846616E5D07A5aBb067C65"
+      to_address: "0x92ef6af472b39f1b363da45e35530c24619245a4"
+      method: "0xa9efd6b8"
+      comment: "proposeL2Output (first used 2024-07-02)"
+  beacon:
+    - from_address: "0xaf1e4f6a47af647f87c0ec814d8032c4a4bff145"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2024-07-02)"
